--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav li{
 nav{
   background-color: #ddd;
   padding: 25px 0;    
-  text-align: left;   
+  text-align: left;  
 }
 
 header p{
@@ -77,6 +77,8 @@ nav a:hover{
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
+  position: relative;
+  top: -40px;
 
   /* Requirement 3a code here*/
   
@@ -84,7 +86,8 @@ nav a:hover{
 
 /* Requirement 3b code here*/
 .skip a:hover{
-
+  position: absolute;
+  top: 0px;
 }
 
 /* Requirement 4 code here*/
@@ -107,58 +110,62 @@ header{
   background-attachment: fixed; /* Parallax effect */
   background-position: center; /* Parallax effect */
   background-size: cover; /* Parallax effect */
+  background-repeat: no-repeat;
   color: white;
   height: 400px; /* Parallax effect */
   grid-column: 1 / -1;
-  grid-row: 1 / 2;
+  grid-row: 1 / span 1;
 
   /* YOUR CODE HERE; */
 }
 
-
+/* .header-image{
+  grid-column: 1 / -1;
+  grid-row: 1 / span 1;
+} */
 
 .about-image{
   grid-column: 1 / -1;
   max-height: 700px;
-  grid-row: 3 / 5;
+  grid-row: 2 / span 1;
+  overflow: hidden;
 }
-
 .about{
- grid-column: 2 / 4;
- grid-row: 2 / 4;
+ grid-column: 2 / span 1;
+ grid-row: 2 / span 1;
 }
 
 .method-image{
  grid-column: 1 / -1;
  max-height: 700px;
- grid-row: 2 / 4;
+ grid-row: 3 / span 1;
+ overflow: hidden;
 }
-
 .method{
-  grid-column: 2 / 4;
-  grid-row: 3 / 5;
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
 }
 
 .clients{
-  grid-column: 2 /4;
-  grid-row: 4 / 6;
+  grid-column: 2 / span 1;
+  grid-row: 4 / span 1;
 }
-
-.contact{
-  grid-column: 2 / 4;
-  grid-row: 5 / 7;
-}
-
 .clients-image{
   grid-column: 1 / -1;
   max-height: 700px;
-  grid-row: 4 / 6;
+  grid-row: 4 / span 1;
+  overflow: hidden;
 }
 
+.contact{
+  grid-column: 2 / span 1;
+  grid-row: 5 / span 1;
+}
 .contact-image{
   grid-column: 1 / -1;
   max-height: 700px;
-  grid-row: 5 / 7;
+  grid-row: 5 / span 1;
+  overflow: hidden;
 }
 
 
@@ -166,6 +173,7 @@ header{
   background-color: rgba(255, 255, 255, .8);
   border: 10px solid black;
   padding: 30px;
+  margin: auto;
 
   /* Your code here */
 
@@ -174,6 +182,8 @@ header{
 @media screen and (min-width: 800px){
   nav{
     padding: 30px 0;
+    text-align: right;
+
 
     /* Your code here */
   }
@@ -184,38 +194,12 @@ header{
    grid-template-rows: repeat(4, 400px);
   }
 
-  
-
-  .about-image{
-    grid-column: 2 / 5;
+  .about, .clients, .method-image, .contact-image{
+    grid-column: 3 / span 2;
   }
 
-  .about{
-    grid-column: 3 / 6;
-  }
-
-  .method-image{
-    grid-column: 3 / 6;
-  }
-
-  .method{
-   grid-column: 2 / 5;
-  }
-
-  .clients-image{
-    grid-column: 2 / 5;
-  }
-
-  .clients{
-    grid-column: 3 / 6;
-  }
-
-  .contact-image{
-    grid-column: 3 / 6;
-  }
-
-  .contact{
-    grid-column: 2 / 5;
+  .method, .contact, .about-image, .clients-image{
+    grid-column: 2 / span 2;
   }
 
 }
