--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ nav a:hover{
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
-  position: relative;
+  position: absolute;
   top: -40px;
 
   /* Requirement 3a code here*/
